<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/tetris"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/name_game"
        app:layout_constraintStart_toStartOf="@+id/name_game"
        app:layout_constraintTop_toBottomOf="@+id/name_game"
        tools:text="@string/high_score" />

    <Button
        android:id="@+id/btn_new_game"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/new_game"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_exit"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toStartOf="@+id/name_game"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_reset_score" />

    <Button
        android:id="@+id/btn_reset_score"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:text="@string/reset_score"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/name_game"
        app:layout_constraintTop_toBottomOf="@+id/tv_high_score" />

    <Button
        android:id="@+id/btn_exit"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_reset_score"
        app:layout_constraintStart_toStartOf="@+id/btn_reset_score"
        app:layout_constraintTop_toBottomOf="@+id/btn_reset_score" />

</androidx.constraintlayout.widget.ConstraintLayout>