<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_restart"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/restart"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="w,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.948"
        app:layout_constraintStart_toEndOf="@+id/btn_right" />

    <TextView
        android:id="@+id/current_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="20dp"
        android:text="@string/current_score"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_current_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/current_score"
        app:layout_constraintStart_toStartOf="@+id/current_score"
        app:layout_constraintTop_toBottomOf="@+id/current_score" />

    <TextView
        android:id="@+id/high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/high_score"
        android:textAllCaps="true"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/current_score"
        app:layout_constraintStart_toStartOf="@+id/current_score"
        app:layout_constraintTop_toBottomOf="@+id/tv_current_score" />

    <TextView
        android:id="@+id/tv_high_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/high_score"
        app:layout_constraintStart_toStartOf="@+id/high_score"
        app:layout_constraintTop_toBottomOf="@+id/high_score" />

    <com.example.tetris.view.TetrisView
        android:id="@+id/view_tetris"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_restart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/arrow_back"
        app:layout_constraintBottom_toBottomOf="@+id/btn_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_top" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/arrow_forward"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_bottom"
        app:layout_constraintTop_toBottomOf="@+id/view_tetris" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/sync"
        app:layout_constraintBottom_toBottomOf="@+id/btn_right"
        app:layout_constraintStart_toEndOf="@+id/btn_left"
        app:layout_constraintTop_toTopOf="@+id/btn_right" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/arrow_downward"
        app:layout_constraintBottom_toBottomOf="@+id/btn_top"
        app:layout_constraintStart_toEndOf="@+id/btn_top"
        app:layout_constraintTop_toTopOf="@+id/btn_top" />


</androidx.constraintlayout.widget.ConstraintLayout>